name: root
version: 1
cabal-version: >= 1.8

library
  exposed-modules:
      Root.Lib
  default-language: Haskell2010
  other-modules:
      Paths_root
  hs-source-dirs:
      src
  build-depends:
    base ==4.*

executable run
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
    base ==4.*,
    root
