cabal-version: 2.2
name:           root
version:        0.1.0.0
synopsis:       root
author:         Torsten Schmits
maintainer:     haskell@tryp.io
copyright:      2021 Torsten Schmits
build-type:     Simple

library
  exposed-modules:
    Root.Lib
  hs-source-dirs:
      lib
  build-depends:
      base ==4.*, incipit-base ==0.1.0.0
  default-extensions:
    ScopedTypeVariables, DataKinds
