cabal-version: 2.2
name:           dep
version:        0.1.0.0
synopsis:       root
author:         Torsten Schmits
maintainer:     haskell@tryp.io
copyright:      2023 Torsten Schmits
build-type:     Simple

library
  exposed-modules:
    Dep.Lib
  hs-source-dirs:
      lib
  build-depends:
      base ==4.*
